Ajout de la section de la section aui suis-je
Pour l'instant que avec la definition des section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <nav id="headerNav">
@@ -17,6 +19,41 @@
     <div id="nameSection">
         <p>Pierre Gibault</p>
     </div>
-    
+    <section id="aboutMeSection">
+        <div id="firstSection">
+            <div id="descriptionAndTechnicalSection">
+                <article id="descriptionSection">
+                    <p>Passionné par le monde de l'informatique, je suis constamment motivé à explorer de nouveaux
+                        horizons dans ce domaine en constante évolution. Mon objectif est de développer mes compétences
+                        techniques tout en contribuant à des projets innovants</p>
+                </article>
+                <article id="technicalSection">
+
+                </article>
+            </div>
+            <article id="professionalBackgroundSection">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer consequat tincidunt porta. Praesent id lacinia felis. Praesent mattis massa nec elit tincidunt, ut accumsan massa tincidunt. Fusce ac placerat ipsum, nec luctus urna. Proin ut augue metus. Suspendisse vel ullamcorper odio. Maecenas vitae augue vehicula, tempus lectus a, vehicula lacus. Donec tincidunt metus a pellentesque dictum. Nulla facilisi. Integer ac sollicitudin neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer consequat tincidunt porta. Praesent id lacinia felis. Praesent mattis massa nec elit tincidunt, ut accumsan massa tincidunt. Fusce ac placerat ipsum, nec luctus urna. Proin ut augue metus. Suspendisse vel ullamcorper odio. Maecenas vitae augue vehicula, tempus lectus a, vehicula lacus. Donec tincidunt metus a pellentesque dictum. Nulla facilisi. Integer ac sollicitudin neque.</p>
+            </article>
+            <article id="interestSection">
+                <ul>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                    <li>Patisserie</li>
+                </ul>
+            </article>
+        </div>
+        <article id="statusSection">
+            <p>Maecenas vitae augue vehicula, tempus lectus a, vehicula lacus. Donec tincidunt metus a pellentesque dictum. Nulla facilisi. Integer ac sollicitudin neque.</p>
+        </article>
+    </section>
+
 </body>
+
 </html>
