--- a/index.html
+++ b/index.html
@@ -11,47 +11,128 @@
 <body>
     <header>
         <nav id="headerNav">
-            <a class="navbarLink" href="">Qui suis-je ?</a>
-            <a class="navbarLink" href="">Projets</a>
-            <a class="navbarLink" href="">Contacts</a>
+            <a class="navbarLink" href="#who">Qui suis-je ?</a>
+            <a class="navbarLink" href="#future">Ambitions</a>
+            <a class="navbarLink" href="#project">Projets</a>
+            <a class="navbarLink" href="#contact">Contacts</a>
         </nav>
     </header>
-    <div id="nameSection">
+    <div id="nameSection" class="rainbowBorder">
         <p>Pierre Gibault</p>
     </div>
-    <section id="aboutMeSection">
+    <hr id="who">
+    <h1 style="font-size: 4em; text-align: center;">Qui suis-je ?</h1>
+    <section id="aboutMeSection" class="rainbowBorder" style="padding: 2em;">
         <div id="firstSection">
             <div id="descriptionAndTechnicalSection">
-                <article id="descriptionSection">
+                <article id="descriptionSection" class="whiteShadow">
+                    <h1 class="aboutMeH1">Présentation</h1>
                     <p>Passionné par le monde de l'informatique, je suis constamment motivé à explorer de nouveaux
                         horizons dans ce domaine en constante évolution. Mon objectif est de développer mes compétences
-                        techniques tout en contribuant à des projets innovants</p>
+                        techniques tout en contribuant à des projets innovants.</p>
                 </article>
-                <article id="technicalSection">
+                <article id="technicalSection" class="whiteShadow">
+                    <h1 class="aboutMeH1">Compétences</h1>
+                    <div class="technicalsLogo">
+                        <br>
+                        <img class="technicalLogo" src="Resources/Images/logo-javascript.svg" alt="logo javascript">
+                        <img class="technicalLogo" src="Resources/Images/Logo_C_sharp.svg" alt="logo c sharp">
+                        <img class="technicalLogo" src="Resources/Images/logo-java.svg" alt="logo Java">
+                        <img class="technicalLogo" src="Resources/Images/logo-php.svg" alt="logo PHP">
+                        <img class="technicalLogo" src="Resources/Images/logo-html.svg" alt="logo html">
+                        <img class="technicalLogo" src="Resources/Images/logo-css.svg" alt="logo css">
+                        <img class="technicalLogo" src="Resources/Images/logo-office.svg" alt="logo office">
+                        <br>
+                        <br>
+                        <br>
+                        <br>
 
+                    </div>
                 </article>
             </div>
-            <article id="professionalBackgroundSection">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer consequat tincidunt porta. Praesent id lacinia felis. Praesent mattis massa nec elit tincidunt, ut accumsan massa tincidunt. Fusce ac placerat ipsum, nec luctus urna. Proin ut augue metus. Suspendisse vel ullamcorper odio. Maecenas vitae augue vehicula, tempus lectus a, vehicula lacus. Donec tincidunt metus a pellentesque dictum. Nulla facilisi. Integer ac sollicitudin neque. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer consequat tincidunt porta. Praesent id lacinia felis. Praesent mattis massa nec elit tincidunt, ut accumsan massa tincidunt. Fusce ac placerat ipsum, nec luctus urna. Proin ut augue metus. Suspendisse vel ullamcorper odio. Maecenas vitae augue vehicula, tempus lectus a, vehicula lacus. Donec tincidunt metus a pellentesque dictum. Nulla facilisi. Integer ac sollicitudin neque.</p>
-            </article>
-            <article id="interestSection">
+            <article id="professionalBackgroundSection" class="whiteShadow">
+                <h1 style="font-size:2em;">Parcours</h1>
+                <p>
                 <ul>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
-                    <li>Patisserie</li>
+                    <li>
+                        <h2>BUT Informatique</h2>
+                    </li>
+                    <li>2022-2025</li>
+                    <li>2éme année en cours</li>
+                    <li>IUT Dijon</li>
+                    <br>
+                    <br>
+                    <br>
+                    <li>
+                        <h2>Baccalauréat STI2D</h2>
+                    </li>
+                    <li>2020-2022</li>
+                    <li>Lycée Raymond Janot Sens </li>
+                    <li>Spécialité Système d’Information et Numérique</li>
+                </ul>
+                </p>
+            </article>
+            <article id="interestSection" class="whiteShadow">
+                <br>
+                <h1 style="font-size: 2em;">Hobby</h1>
+                <br>
+                <br>
+                <br>
+                <ul>
+                    <li>Sport (musculation)</li>
+                    <li>Jeux vidéos</li>
+                    <li>Lécture</li>
                 </ul>
             </article>
         </div>
-        <article id="statusSection">
-            <p>Maecenas vitae augue vehicula, tempus lectus a, vehicula lacus. Donec tincidunt metus a pellentesque dictum. Nulla facilisi. Integer ac sollicitudin neque.</p>
-        </article>
+    </section>
+    <br>
+    <br>
+    <br>
+    <hr id="future">
+    <br>
+    <br>
+    <h1 style="text-align: center; font-size: 4em;">Mes ambitions</h1>
+    <section id="futureSection" class="rainbowBorder">
+        <h1></h1>
+        <div>
+            <h1 style="text-align: center; font-size: 2em;">Mon future</h1>
+            <br>
+            <p> Aujourd'hui, en deuxième année de BUT informatique, je suis animé par le désir de concrétiser mes
+                ambitions professionnelles. L'année prochaine, je souhaite m'engager dans une alternance, puis
+                poursuivre mes études dans une école d'ingénieur. Mon objectif est de trouver une entreprise qui offre
+                un environnement de travail propice à l'épanouissement, où les employés ont la liberté d'exprimer leur
+                créativité et d'innover. Je suis convaincu que cette approche favorise à la fois le développement
+                personnel et la réussite collective. Je suis donc en quête d'une entreprise qui valorise l'autonomie et
+                la confiance en ses collaborateurs, car je crois fermement que cela contribue à stimuler l'engagement et
+                la performance de chacun.</p>
+        </div>
+    </section>
+    <hr id="project">
+    <h1 style="text-align: center; font-size: 4em;">Projets</h1>
+    <section id="ProjectsSection" class="rainbowBorder">
+        <div style="margin: 6em 0em 5em 4em;">
+            <a href="https://github.com/dept-info-iut-dijon/SushiGo_CircusInformaticus"><img
+                    style="width: 30em; border-radius: 15px;" class="whiteShadow"
+                    src="Resources/Images/SushiGo-mainScreen.jpg" alt="logo sushiGo"></a>
+        </div>
+        <div id="ProjetctTextSection" class="whiteShadow">
+            <p>J'ai réalisé avec mes camarades, dans le cadre de ma deuxième année de BUT, une adaptation numérique du
+                jeu de cartes SushiGo. Pour mener à bien ce projet, nous avons utilisé les langages C# et XAML, ainsi
+                que le framework WPF. Cette expérience m'a permis de découvrir de nouvelles méthodes de travail. Le
+                projet est divisé en une partie client, qui permet de jouer au jeu, et une partie serveur, qui coordonne
+                les différents joueurs.</p>
+        </div>
+    </section>
+    <hr id="contact">
+    <section id="contactSection">
+        <div style="height: 5em; display: flex; font-size: 2em; justify-content: center;">
+            <a style="color: white; text-decoration: none;" class="contactLinks"
+                href="https://github.com/Pierre-Gibault">Github</a>
+            <a style="color: white; text-decoration: none;" class="contactLinks"
+                href="https://www.linkedin.com/in/pierre-gibault/">Linkedin</a>
+            <a style="color: white; text-decoration: none;" class="contactLinks" href="">Discord</a>
+        </div>
     </section>
 
 </body>
