--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section id="futureSection" class="rainbowBorder">
         <h1></h1>
         <div>
-            <h1 style="text-align: center; font-size: 2em;">Mon future</h1>
+            <h1 style="text-align: center; font-size: 2em;">Mon futur</h1>
             <br>
             <p> Aujourd'hui, en deuxième année de BUT informatique, je suis animé par le désir de concrétiser mes
                 ambitions professionnelles. L'année prochaine, je souhaite m'engager dans une alternance, puis
